--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.4.2",
-    "expo": "~53.0.9",
+    "expo": "53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.5",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
