--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.4.2",
-    "expo": "^53.0.20",
+    "expo": "^53.0.22",
+    "expo-location": "^18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
