--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -15,7 +15,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-maps": "1.20.1"
+    "react-native-maps": "^1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
