haciendo el mapa funcional usando eas porque espo solo no puede correr mapas complejos como los de google

--- a/avellanedaUnida/app.json
+++ b/avellanedaUnida/app.json
@@ -13,17 +13,36 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tuusuario.avellanedaunida",
+      "config": {
+        "googleMapsApiKey": "AIzaSyC8JtqvtusUWO7mk3bPN7D9ey3qFfJ3g"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "package": "com.tuusuario.avellanedaunida",
+      "edgeToEdgeEnabled": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyC8JtqvtusUWO7mk3bPN7D9ey3qFfJ3g"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "655b0bf6-026a-41d8-9207-c1af9d9ea9f0"
+      }
+    },
+    "plugins": [
+      "expo-dev-client"
+    ]
   }
 }
+
