--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.4.2",
     "expo": "^53.0.22",
-    "expo-location": "^18.1.6",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-maps": "^1.20.1"
+    "react-native-maps": "^1.20.1",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
