--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -15,8 +15,10 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-maps": "^1.20.1",
-    "expo-dev-client": "~5.2.4"
+    "react-native-maps": "1.20.1",
+    "expo-dev-client": "~5.2.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
