--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.4.2",
     "expo": "^53.0.22",
+    "expo-dev-client": "~5.2.4",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
+    "mysql2": "^3.15.1",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-maps": "1.20.1",
-    "expo-dev-client": "~5.2.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
