--- a/avellanedaUnida/backend/package.json
+++ b/avellanedaUnida/backend/package.json
@@ -24,5 +24,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
