--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -1,8 +1,11 @@
-{
-  "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.5.0",
-    "@react-navigation/native": "^7.1.18",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.18.0"
-  }
-}
+{"dependencies": {
+  "@react-navigation/bottom-tabs": "^6.5.2",
+  "@react-navigation/native": "^6.0.13",
+  "expo": "~51.0.0",
+  "expo-location": "~17.0.1",
+  "react": "~18.2.0",
+  "react-native": "~0.74.5",
+  "react-native-maps": "~1.14.0",
+  "react-native-safe-area-context": "4.10.5",
+  "react-native-screens": "~3.31.1"
+}}
