--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -1,11 +1,29 @@
-{"dependencies": {
-  "@react-navigation/bottom-tabs": "^6.5.2",
-  "@react-navigation/native": "^6.0.13",
-  "expo": "~51.0.0",
-  "expo-location": "~17.0.1",
-  "react": "~18.2.0",
-  "react-native": "~0.74.5",
-  "react-native-maps": "~1.14.0",
-  "react-native-safe-area-context": "4.10.5",
-  "react-native-screens": "~3.31.1"
-}}
+{
+  "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.0.13",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "expo": "~54.0.0",
+    "expo-location": "~19.0.7",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
+  },
+  "name": "avellanedaunida",
+  "version": "1.0.0",
+  "main": "App.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
