--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.4.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "expo": "~54.0.0",
     "expo-location": "~19.0.7",
     "express": "^5.1.0",
+    "firebase": "^9.23.0",
     "mysql2": "^3.15.3",
     "react": "19.1.0",
     "react-native": "0.81.5",
