--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -9,10 +9,13 @@
     "expo-location": "~19.0.7",
     "express": "^5.1.0",
     "firebase": "^9.23.0",
+    "i18next": "^25.6.0",
     "mysql2": "^3.15.3",
     "react": "19.1.0",
+    "react-i18next": "^16.2.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-localize": "^3.5.4",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
