--- a/avellanedaUnida/package.json
+++ b/avellanedaUnida/package.json
@@ -2,11 +2,12 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/stack": "^6.3.20",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "expo": "~50.0.0",
     "expo-location": "~19.0.7",
+    "expo-modules-core": "~1.11.1",
     "express": "^5.1.0",
     "firebase": "^9.23.0",
     "i18next": "^25.6.0",
@@ -19,7 +20,7 @@
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~3.31.1"
   },
   "name": "avellanedaunida",
   "version": "1.0.0",
