--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dotenv": "^17.2.3",
     "expo": "~50.0.0",
     "expo-location": "~19.0.7",
-    "expo-modules-core": "~1.11.1",
+    "expo-modules-core": "^1.11.1",
     "express": "^5.1.0",
     "firebase": "^9.23.0",
     "i18next": "^25.6.0",
@@ -19,7 +19,7 @@
     "react-native-localize": "^3.5.4",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "~4.9.0",
     "react-native-screens": "~3.31.1"
   },
   "name": "avellanedaunida",
