--- a/eas.json
+++ b/eas.json
@@ -10,9 +10,8 @@
     },
     "preview": {
       "distribution": "internal",
-     
       "android": {
-        "node": "18.19.0"
+        "node": "18.x"
       }
     },
     "production": {
