--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "expo": "~50.0.0",
-    "expo-location": "~19.0.7",
-    "expo-modules-core": "^1.11.1",
+    "expo-location": "~16.5.5",
+    "expo-modules-core": "~1.11.14",
     "express": "^5.1.0",
     "firebase": "^9.23.0",
     "i18next": "^25.6.0",
@@ -15,12 +15,12 @@
     "react": "18.2.0",
     "react-i18next": "^16.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.28.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-localize": "^3.5.4",
-    "react-native-maps": "1.20.1",
-    "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "~4.9.0",
-    "react-native-screens": "~3.31.1"
+    "react-native-maps": "1.10.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "name": "avellanedaunida",
   "version": "1.0.0",
