--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,15 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {         
+        "node": "18.x"
+      }
     },
     "preview": {
       "distribution": "internal",
-     
       "android": {
-        "node": "18.19.0"
+        "node": "18.19.0"  
       }
     },
     "production": {
