--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,7 @@
       "developmentClient": true,
       "distribution": "internal",
       "android": {         
-        "node": "18.x"
+        "node": "18"
       }
     },
     "preview": {
