guardar antes de sdk54

--- a/app.json
+++ b/app.json
@@ -29,6 +29,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
+      "hostUri": "192.168.100.2:8081",  
       "eas": {
         "projectId": "655b0bf6-026a-41d8-9207-c1af9d9ea9f0"
       }
