--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~6.1.2",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.20",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "expo": "~50.0.0",
-    "expo-dev-client": "~3.3.12",
-    "expo-location": "~16.5.5",
-    "expo-modules-core": "~1.11.14",
+    "expo": "^54.0.0",
+    "expo-dev-client": "~6.0.16",
+    "expo-location": "~19.0.7",
+    "expo-modules-core": "~3.0.23",
     "express": "^5.1.0",
     "firebase": "^9.23.0",
     "i18next": "^25.6.0",
     "mysql2": "^3.15.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^16.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-localize": "^3.5.4",
-    "react-native-maps": "1.10.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "name": "avellanedaunida",
   "version": "1.0.0",
