--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "expo": "^54.0.0",
     "expo-dev-client": "~6.0.16",
@@ -13,6 +14,7 @@
     "express": "^5.1.0",
     "firebase": "^9.23.0",
     "i18next": "^25.6.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.15.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
