--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "main": "App.js",
   "scripts": {
     "start": "expo start --host 192.168.100.2 --dev --minify",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "keywords": [],
   "author": "",
